--- a/task-01.html
+++ b/task-01.html
@@ -1,3 +1,12 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+</head>
+<body>
 <ul id="categories">
     <li class="item">
         <h2>Animals</h2>
@@ -27,3 +36,7 @@
         </ul>
     </li>
 </ul>
+    
+<script src="./js/task-01.js"></script>
+</body>
+</html>
