--- a/task-02.html
+++ b/task-02.html
@@ -7,6 +7,9 @@
     <title>Document</title>
 </head>
 <body>
-    
+
+    <ul id="ingredients"></ul>
+
+   <script src="./js/task-02.js"></script> 
 </body>
 </html>
