--- a/task-04.html
+++ b/task-04.html
@@ -8,8 +8,12 @@
     <link rel="stylesheet" href="./css/common.css" />
 </head>
 <body>
-
-    <ul class="gallery"></ul>
-    <script src="./js/task-03.js"></script>
+    <div id="counter">
+        <button type="button" data-action="decrement">-1</button>
+        <span id="value">0</span>
+        <button type="button" data-action="increment">+1</button>
+    </div>
+    
+    <script src="./js/task-04.js" type="modal"></script>
 </body>
 </html>
