--- a/task-04.html
+++ b/task-04.html
@@ -8,12 +8,16 @@
     <link rel="stylesheet" href="./css/common.css" />
 </head>
 <body>
+
     <div id="counter">
         <button type="button" data-action="decrement">-1</button>
         <span id="value">0</span>
         <button type="button" data-action="increment">+1</button>
     </div>
-    
-    <script src="./js/task-04.js" type="modal"></script>
+
+    <script src="./js/task-04.js"></script>
+
 </body>
 </html>
+
+
